...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/myCarIcon"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/car4" />
                </LinearLayout>
            </FrameLayout>
...
